--- a/index.html
+++ b/index.html
@@ -18,10 +18,20 @@
     </p>
 
     <p>
+      <a href="http://twitter.com/learnenough" target="_blank" rel="noopener" style="text-decoration: none;">
+        <img src="images/small_twitter_logo.png" alt="Twitter Logo">
+      </a>
+      You should follow Learn Enough on Twitter
+      <a href="http://twitter.com/learnenough" target="_blank" rel="noopener">here</a>
+    </p>
+
+    <p>
       HTML was created by the original "web developer", computer scientist <a href="http://en.wikipedia.org/wiki.TIM_berners-Lee">Tim Berners-Lee</a>. It's not true taht Sir Tim invented HTML in order to share pictures of his cat, but it would be coll if it were.
     </p>
 
-    <img src="images/kitten.jpg" alt="An Adorable kitten">
+    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329" target="_blank" rel="noopener">
+      <img src="images/kitten.jpg" alt="An Adorable kitten">
+    </a>
 
     <h2>Background</h2>
 
