Add a Moby Dick page and a menu

--- a/tags.html
+++ b/tags.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>HTML Tags</title>
     <meta charset="utf-8">
   </head>
   <body>
+
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
     
     <h1>Important HTML tags</h1>
 
@@ -57,6 +63,31 @@
         <td><code>td</code></td>
         <td>table data</td>
         <td>include a table of data cell</td>
+      </tr>
+      <tr>
+        <td><code>header</code></td>
+        <td>header</td>
+        <td>The <code>&lt;header&gt;</code> element represents a container for introductory content or a set of navigational links.</td>
+      </tr>
+      <tr>
+        <td><code>div</code></td>
+        <td>divisions</td>
+        <td>set the page divisions apart.</td>
+      </tr>
+      <tr>
+        <td><code>ol</code></td>
+        <td>Ordered list</td>
+        <td>create ordered list</td>
+      </tr>
+      <tr>
+        <td><code>ul</code></td>
+        <td>Unordered list</td>
+        <td>create unordered list</td>
+      </tr>
+      <tr>
+        <td><code>li</code></td>
+        <td>List element</td>
+        <td>include content in an list element</td>
       </tr>
     </table>
 
@@ -121,6 +152,13 @@
           <code>&lt;em&gt;technical sophistication&lt;/em&gt;</code>
         </td>
       </tr>
+      <td><code>span</code></td>
+      <td>span</td>
+      <td>mark up a part of a text.</td>
+      <td>
+        <code>&lt;span&gt;Call me Ishmael.&lt;/span&gt;</code>
+      </td>
+      <td><span>Call me Ishmael.</span></td>
     </table>
 
   </body>
