--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <title>Learn Enough to Be Dangerous</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div id="main-nav" class="nav-menu">
+      <a href="index.html" class="nav">Home</a>
+      <a href="tags.html" class="nav-spacing nav">HTML Tags</a>
+      <a href="moby_dick.html" class="nav-spacing nav">Moby Dick</a>
     </div>
 
     <h1>The Learn Enough Story</h1>
@@ -25,7 +26,7 @@
     </p>
 
     <p>
-      <a href="http://twitter.com/learnenough" target="_blank" rel="noopener" style="text-decoration: none;">
+      <a href="http://twitter.com/learnenough" target="_blank" rel="noopener" class="image-link">
         <img src="images/small_twitter_logo.png" alt="Twitter Logo">
       </a>
       You should follow Learn Enough on Twitter
@@ -33,12 +34,26 @@
     </p>
 
     <p>
-      HTML was created by the original "web developer", computer scientist <a href="http://en.wikipedia.org/wiki.TIM_berners-Lee">Tim Berners-Lee</a>. It's not true taht Sir Tim invented HTML in order to share pictures of his cat, but it would be coll if it were.
+      HTML was created by the original "web developer", computer scientist <a href="http://en.wikipedia.org/wiki.TIM_berners-Lee">Tim Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to share pictures of his cat, but it would be coll if it were.
     </p>
 
     <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329" target="_blank" rel="noopener">
       <img src="images/kitten.jpg" alt="An Adorable kitten">
     </a>
+
+    <h2>Quotations</h2>
+
+    <p>
+      In addition to hosting most of the world's supply of kitten videos, the web is also full of inspiring quotes, perhaps none more so than this one:
+    </p>
+
+    <blockquote style="padding: 2px 20px; background: #a2a2a2;">
+      <p>
+        <em>Don't believe every quote you read on the Internet.</em>
+        <br>
+        -Abraham Lincoln
+      </p>
+    </blockquote>
 
     <h2>Background</h2>
 
@@ -46,7 +61,8 @@
       Learn Enough to Be Dangerous is an outgrowth of the <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> and the <a href="http://www.softcover.io/">Softcover publishing platform</a>. This page is part of the sample site for <a href="http://www.learnenough.com/html"><em>Learn Enough HTML to Be Dangerous</em></a>, which teaches the basics of <strong>H</strong>yper<strong>T</strong>ext<strong>M</strong>arkup<strong>L</strong>anguage, the universal language of the World Wide Web. Other related tutorials can be found at <a href="http://www,learnenough.com/">learnenough.com</a>.
     </p>
 
-    <h2>Founders</h2>
+    <h2 id="founders">Founders</h2>
+    <!-- We can visit that section of the page directly by pasting the URL sample_website/index.html/#founders -->
 
     <p>
       Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee Donahoe, and Nick Merwin. We believe that the kind of technical sophistication taught by the Learn Enough tutorials can benefit <em><strong>at least a billion people</strong></em>, and probably more.
