--- a/tags.html
+++ b/tags.html
@@ -3,13 +3,14 @@
   <head>
     <title>HTML Tags</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div class="nav-menu">
+      <a href="index.html" class="nav">Home</a>
+      <a href="tags.html" class="nav nav-spacing">HTML Tags</a>
+      <a href="moby_dick.html" class="nav mav-spacing">Moby Dick</a>
     </div>
     
     <h1>Important HTML tags</h1>
@@ -35,59 +36,64 @@
         <th>Purpose</th>
       </tr>
       <tr>
-        <td><code>h1</code>&ndash;<code>h6</code></td>
-        <td>heading</td>
-        <td>include a heading (level 1&ndash;6)</td>
+        <td style="padding: 20px;"><code>h1</code>&ndash;<code>h6</code></td>
+        <td style="padding: 20px;">heading</td>
+        <td style="padding: 20px;">include a heading (level 1&ndash;6)</td>
       </tr>
       <tr>
-        <td><code>p</code></td>
-        <td>paragraph</td>
-        <td>include a paragraph of text</td>
+        <td style="padding: 20px;"><code>p</code></td>
+        <td style="padding: 20px;">paragraph</td>
+        <td style="padding: 20px;">include a paragraph of text</td>
       </tr>
       <tr>
-        <td><code>table</code></td>
-        <td>table</td>
-        <td>include a table</td>
+        <td style="padding: 20px;"><code>table</code></td>
+        <td style="padding: 20px;">table</td>
+        <td style="padding: 20px;">include a table</td>
       </tr>
       <tr>
-        <td><code>tr</code></td>
-        <td>table row</td>
-        <td>include a row of data</td>
+        <td style="padding: 20px;"><code>tr</code></td>
+        <td style="padding: 20px;">table row</td>
+        <td style="padding: 20px;">include a row of data</td>
       </tr>
       <tr>
-        <td><code>th</code></td>
-        <td>table header</td>
-        <td>make a table header</td>
+        <td style="padding: 20px;"><code>th</code></td>
+        <td style="padding: 20px;">table header</td>
+        <td style="padding: 20px;">make a table header</td>
       </tr>
       <tr>
-        <td><code>td</code></td>
-        <td>table data</td>
-        <td>include a table of data cell</td>
+        <td style="padding: 20px;"><code>td</code></td>
+        <td style="padding: 20px;">table data</td>
+        <td style="padding: 20px;">include a table of data cell</td>
       </tr>
       <tr>
-        <td><code>header</code></td>
-        <td>header</td>
-        <td>The <code>&lt;header&gt;</code> element represents a container for introductory content or a set of navigational links.</td>
+        <td style="padding: 20px;"><code>header</code></td>
+        <td style="padding: 20px;">header</td>
+        <td style="padding: 20px;">The <code>&lt;header&gt;</code> element represents a container for introductory content or a set of navigational links.</td>
       </tr>
       <tr>
-        <td><code>div</code></td>
-        <td>divisions</td>
-        <td>set the page divisions apart.</td>
+        <td style="padding: 20px;"><code>div</code></td>
+        <td style="padding: 20px;">divisions</td>
+        <td style="padding: 20px;">set the page divisions apart.</td>
       </tr>
       <tr>
-        <td><code>ol</code></td>
-        <td>Ordered list</td>
-        <td>create ordered list</td>
+        <td style="padding: 20px;"><code>ol</code></td>
+        <td style="padding: 20px;">Ordered list</td>
+        <td style="padding: 20px;">create ordered list</td>
       </tr>
       <tr>
-        <td><code>ul</code></td>
-        <td>Unordered list</td>
-        <td>create unordered list</td>
+        <td style="padding: 20px;"><code>ul</code></td>
+        <td style="padding: 20px;">Unordered list</td>
+        <td style="padding: 20px;">create unordered list</td>
       </tr>
       <tr>
-        <td><code>li</code></td>
-        <td>List element</td>
-        <td>include content in an list element</td>
+        <td style="padding: 20px;"><code>li</code></td>
+        <td style="padding: 20px;">List element</td>
+        <td style="padding: 20px;">include content in an list element</td>
+      </tr>
+      <tr>
+        <td style="padding: 20px;">blockquote</td>
+        <td style="padding: 20px;">blockquote</td>
+        <td style="padding: 20px;">the <code>&lt;blockquote&gt;</code> tag specifies a section that is quoted from another source</td>
       </tr>
     </table>
 
@@ -159,6 +165,45 @@
         <code>&lt;span&gt;Call me Ishmael.&lt;/span&gt;</code>
       </td>
       <td><span>Call me Ishmael.</span></td>
+    </table>
+
+    <h2>document tags</h2>
+
+    <table>
+      <tr>
+        <th>Tag</th>
+        <th>Name</th>
+        <th>Properties</th>
+      </tr>
+      <tr>
+        <td>html</td>
+        <td>html</td>
+        <td>the root element of an HTML page</td>
+      </tr>
+      <tr>
+        <td>head</td>
+        <td>head</td>
+        <td>contains meta information about the HTML page</td>
+      </tr>
+      <tr>
+        <td>body</td>
+        <td>body</td>
+        <td>defines the document's body, and is a container for all the visible contents</td>
+      </tr>
+      <tr>
+        <td>meta</td>
+        <td>meta</td>
+        <td>the <code>&lt;meta&gt;</code> tag defines metadata about an HTML document. Metadata is data (information) about data</td>
+      </tr>
+      <tr>
+        <td>title</td>
+        <td>title</td>
+        <td>specifies a title for the HTML page</td>
+      </tr>
+    </table>
+
+    <table>
+      <tr></tr>
     </table>
 
   </body>
